simple example of staged copy